--- a/BaiKiemTra1/pom.xml
+++ b/BaiKiemTra1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>BaiKiemTraAutoTest2</artifactId>
+    <artifactId>BaiKiemTra1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -62,6 +62,13 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.22.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.1</version>
         </dependency>
 
     </dependencies>
